<resources>
    <string name="app_name">MyApp05Cafe</string>
    <string name="greeting">Добро пожаловать</string>
    <string name="name_hint">Введите имя</string>
    <string name="password_hint">Введите пароль</string>
    <string name="SignInButton">Войти</string>
    <string name="servis_burger_king">Burger King</string>
    <string name="greetings">Привет %s! Что пожелаете?</string>
    <string name="tea">Чай</string>
    <string name="coffee">Кофе</string>
    <string name="additives">Что добавить в ваш %s</string>
    <string name="sugar">Сахар</string>
    <string name="milk">Молоко</string>
    <string name="lemon">Лимон</string>
    <string name="drinkType">Выберите тип напитка</string>
    <string name="buttonOrder">Сделать заказ</string>
    <string name="name">Имя</string>
    <string name="drink">Drink</string>
    <string name="drink_type">drink_type</string>
    <string name="additives_layout3">Additives</string>
    <string name="error_fields_empty">Пожалуйста заполните все поля</string>
    <array name="types_of_tea">
        <item>Зеленый</item>
        <item>Чёрный</item>
        <item>Клубничный</item>
        <item>Облепиховый</item>
    </array>
    <array name="types_of_coffee">
        <item>Капучино</item>
        <item>Американо</item>
        <item>Латте</item>
        <item>Эспрессо</item>
        <item>Дабл</item>
    </array>
    <string name="resultName"></string>
    <string name="resultDrink"></string>
    <string name="resultDrinkType"></string>
    <string name="resultDrinkAdditives"></string>
</resources>